--- a/translation/03_第三章.md
+++ b/translation/03_第三章.md
@@ -6,12 +6,12 @@
 
 **本章提要**
 
-为了节省时间和资金，软件开发者通常会选择利用现有的软件来完成他们的工作。在本章，我们将介绍重用现有软件的其中一种方式，程序员们通常会将这些经过大量测试的软件作为自身工作的为起点。我们将学习如何通过阅读函数标题来了解现有函数的用法，并通过阅读这些函数用法中的前置和后置条件来确定它们的功能。在本章的最后，我们还会列出一些你可能会遇到的错误种类。我们希望在完成本章的学习之后，你将：
+为了节省时间和资金，软件开发者通常会选择利用现有的软件来完成他们的工作。在本章，我们将介绍重用现有软件的其中一种方式，程序员们通常会将这些经过大量测试的软件作为自身工作的为起点。我们将学习如何通过函数的头信息（function headings）了解现有函数的用法，并通过阅读这些函数用法中的前置和后置条件来确定它们的功能。在本章的最后，我们还会列出一些你可能会遇到的错误种类。我们希望在完成本章的学习之后，你将：
 
 * 学会使用一些数学函数和三角函数来进行求值运算。
 * 学会在调用函数时使用参数。
 * 理解为什么程序员们要将软件划分成一系列函数。
-* 学会通过阅读函数标题来了解现有函数的用法。
+* 学会通过函数的头信息来了解现有函数的用法。
 
 ## 3.1 `cmath`函数
 
@@ -232,17 +232,17 @@ Rounded number : 3.46
 * e. fabs(-23.4)
 * f. pow(4.0, 2.0)
 
-## 3.3 CALLS TO DOCUMENTED FUNCTIONS
+## 3.3 调用已被文档化的函数
 
-All functions must first be declared with a function heading so the compiler can determine whether the function calls are correct. These function headings also help the programmer properly call those functions. If you peruse the fi le cmath, you will see many such function headings. 
+在C++中，所有的函数都必须先要声明函数头信息，然后编译器才能确定相关的函数调用操作是否正确。另外，这些函数的头信息也能帮助程序员正确地调用他们。譬如，如果我们仔细阅读一下`cmath`这个文件，就会看到许多这样的函数头信息。
 
-This section concentrates on how to read these function headings and how to use other documentation describing what a particular function expects and what that function will do. These are called the function’s preconditions and postconditions, respectively.
+在这一节，我们就来重点介绍一下应该如何阅读这些函数的头信息，以及如何用其他说明文档来了解相关函数的预期和所要执行的动作，我们通常分别将它们称之为函数的前置条件与后置条件。
 
-### 3.3.1 PRECONDITIONS AND POSTCONDITIONS
+### 3.3.1 前置条件与后置条件
 
-For a function to behave properly, certain conditions are presumed. Consider the sqrt function, which presumes that the argument is greater than or equal to 0.0. Th e *preconditions* of a function state assumptions made about arguments to the function. If the preconditions are not met, all bets are off —the function’s behavior is undefi ned. Some systems cause program termination with an arithmetic overflow error. Other systems may return values such as -1.\#IND or nan, which represents the value “Not a Number.” Th e function call must satisfy the preconditions in order to have predictable results.
+为了让函数能够正常执行它的操作，我们通常都会为其预设一些使用条件。譬如，对于`sqrt`函数来说，其预置条件就是要求函数参数是一个大于或等于0.0的数。函数的*前置条件*通常都是一些过于调用参数的一些假定。如果这些前置条件得不到满足，所有的预置动作都会被取消——这时函数行为将是未定义的，有些系统会以算术溢出错误终止程序，也有些系统会返回一个类似`-1.#IND`或`NaN`这样的只，告诉我们该值“不是一个数字”。总而言之，如果我们想让自己的函数调用得到可预期的结果，就必须要满足它的这些前置条件。
 
-The other part of the contract is the *postconditions*—the statements that describe what the function does if the preconditions were met. The pre- and postconditions are often written as part of the function documentation. For example, here is the sqrt function documented with preconditions and postconditions:
+使用条件的另一部分叫做*后置条件*——这部分描述的是在前置条件得到满足的情况下函数会执行的动作。函数的前置条件和后置条件通常会被写入到该函数的文档部分中。例如下面就是`sqrt`这个函数关于其前置条件和后置条件的文档。
 
 ```C++
 double sqrt(double x)
@@ -250,14 +250,14 @@ double sqrt(double x)
 // postcondition: Square root of x replaces the function call
 ```
 
-The comments indicate the argument must be greater than or equal to 0.0. If this precondition is met, the square root of that argument is returned to the *client*—the code that called the function. If the precondition is not met, the result is undefi ned.
+如你所见，注释说明了参数必须是一个大于或等于0.0的数字。如果该前置条件得到了满足，该参数的平方根就会被返回给*客户*——即调用该函数的代码。反之，结果将是未定义的。
 
-| Function Call | Return Result |
+| 函数调用       | 返回的结果      |
 |---------------|---------------|
-| sqrt(4.0)  | The precondition was met: 2.0 is returned.|
-| sqrt(-1.0) | The precondition was not met. Th is function call may return nan (not a number) |
+| `sqrt(4.0)`  | 前置条件得到满足，返回结果为2.0。|
+| `sqrt(-1.0`) | 前置条件未被满足，该函数调用将返回`NaN`（即非数字）。|
 
-Another implied precondition to calling a function and getting predictable results is this: the client code must supply a proper type of argument. For example, the ceil function takes one double argument. This implies the argument must be convertible to a double, which includes short, int, oat, and even char. For example, ceil will not accept a string argument. Th is could be stated as an obvious precondition like this:
+当然，要想在调用函数之后获得预期的结果还有一个隐藏的前置条件，那就是客户代码必须提供正确的参数类型。例如，`ceil`函数需要的是一个`double`类型的参数，这意味着我们提供的参数必须要能被转换成`double`类型，包括`short`、`int`、`float`以及`char`。例如。`ceil`函数不接受`string`类型的参数，这可以说四个显而易见的先决条件：
 
 ```C++
 double ceil(double x)
@@ -265,23 +265,23 @@ double ceil(double x)
 // postcondition: Return the smallest integer >= x
 ```
 
-However, this information is implied in the parameter declaration. The compiler detects improper argument. From now on, such function preconditions will not be written.
+但是，这类信息通常会被隐藏在参数声明中，编译器会根据声明自行检测出不正确的的参数。因此我们不会将这些内容写入前置条件。
 
-The compiler does not detect preconditions. For example, it is syntactically correct to have a program with this:
+前置条件的内容通常不是编译器能检测到的，例如，下面的程序在语法上是完全正确的：
 
 ```C++
 cout << sqrt(-1.0); // Return depends on the system in use
 ```
 
-From now on, the label for preconditions will be abbreviated as pre: and for postconditions as post:. Th e same function (ceil) may now be documented as follows:
+从现在开始，我们会将前置条件的标签缩写成`pre:`，而后置条件则用`post:`来表示，这样的话，我们就可以上面同一个函数（`ceil`）的文档写成这样：
 
 ```C++
 double ceil(double x) // post: Return the smallest integer >= x
 ```
 
-It should be noted that the use of pre: and post: after the function headings is not required. Diff erent people document functions in their own ways. Th is documentation is particular to this textbook.
+当然，我们应该留意一下`pre:`和`post:`的用法，不一定非要放在函数头信息之后。不同的人对函数文档化的方式是不一样的，这里只是本书所采用的风格。
 
-### 3.3.2 FUNCTION HEADINGS
+### 3.3.2 函数头信息
 
 Pre- and postconditions help programmers determine the proper use of functions. If provided as documentation, they are usually listed after the function heading. Th e function heading also provides very important usage information such as the type of value returned and the number of arguments required by the function. Here is the general form of a function heading:
 
@@ -406,8 +406,8 @@ twoParameters("\$", 3.4);
 The following attempts to call twoParameters result in compile time
 errors:
 
-| Error                         | Reason for Error|
-|-------------------------------|-----------------|
+| Error                         | Reason for Error |
+|-------------------------------|------------------|
 | twoParameters("a");           | Needs two arguments. |
 | twoParameters("1.1", "2.2");  | The string “ 2.2 ” can’t be assigned to a double . |
 | twoParameters(1.1, 1.1);      | The number 1.1 can’t be assigned to a string . |
