--- a/translation/03_第三章.md
+++ b/translation/03_第三章.md
@@ -279,25 +279,25 @@ cout << sqrt(-1.0); // Return depends on the system in use
 double ceil(double x) // post: Return the smallest integer >= x
 ```
 
-当然，我们应该留意一下`pre:`和`post:`的用法，不一定非要放在函数头信息之后。不同的人对函数文档化的方式是不一样的，这里只是本书所采用的风格。
+当然，我们应该留意一下`pre:`和`post:`的用法，它们不一定非要放在函数头信息之后。不同的人对函数文档化的方式是不一样的，这里只是本书所采用的风格。
 
 ### 3.3.2 函数头信息
 
-Pre- and postconditions help programmers determine the proper use of functions. If provided as documentation, they are usually listed after the function heading. Th e function heading also provides very important usage information such as the type of value returned and the number of arguments required by the function. Here is the general form of a function heading:
+前置条件和后置条件可以帮助程序员确定相关函数的正确用法。如果我们想将这些作为文档提供给用户，它们通常会被列在函数的头信息之后。函数的头信息也是用于说明函数返回值和所需参数的非常重要的信息。下面我们来看一些函数头信息的通用格式：
 
-**General Form 3.2** *Function Heading*
+**通用格式 3.2**：*函数头信息*
 
 *return-type function-name* (*parameter-1, parameter-2, parameter-n*)
 
-The *return-type* may be any valid C++ class or the keyword void. A void function does not return anything. Th e parameters between ( and ) may either be value parameters, reference parameters, or const reference parameters. Value parameters are up first.
+在这里，*return-type*可以是任何有效的C++类型或关键字`void`。函数的返回值为`void`时就表示它没有返回值。另外，在括号`( )`之间的参数可以是值类型参数、引用类型参数或者`const`的引用类型参数和值类型参数。下面我们先来看值类型参数。
 
-A function may require one or more arguments. Values are passed to functions by adding value parameters of this form:
+一个函数通常都会有一个或多个参数，通过添加值类型参数来让我们可以将值传递给函数的格式如下：
 
-**General Form 3.3** *Value Parameter*
+**通用格式 3.3**：*值类型参数*
 
 *class-name identifier*
 
-**Examples of Standard C++ Function Headings:**
+**标准C++函数的头信息示例：**
 
 ```C++
 int isapha(int c)
@@ -306,7 +306,7 @@ double round (double x);
 double remainder(double numerator, double denom);
 ```
 
-Function headings specify the type of value returned by the function, the function name, and the number of arguments the programmer must supply. The class of arguments required is specifi ed as the *class-name* of each parameter between the parentheses. For example, because the parameters in pow below, x and y, are declared as double, one can ascertain that the type of each argument in calls to pow must be double, or at least convertible to double—an integer for example.
+如你所见，函数头信息指定了函数的返回值类型、函数的名称以及其要程序员体的参数数量。函数的参数类型也通过括号之间各参数的*class-name*部分做了指定。例如，由于下面的`pow`函数的参数`x`和`y`被声明成了`double`类型，所以我们可以确定调用`pow`函数的每个参数都必须是`double`类型，或者至少可以转换成`double`类型的，譬如整数类型。
 
 ```C++
 double pow(double x, double y)
@@ -315,22 +315,24 @@ double pow(double x, double y)
 // post: Returns x to the yth power
 ```
 
-Also note that the function name is pow and its return type is double.
+另外不要忘了，这里还声明了函数名是`pow`，返回值类型是`double`。
 
-Although the complete implementation of the pow function is not present, the information supplied by the preconditions, the postconditions and the function heading are enough to eff ectively utilize the function.
+虽然这里并没有提供`pow`函数的完整实现，但前置条件、后置条件以及函数头信息所提供的信息已经足以有效地帮助人们了解该函数的用法了。
 
-To summarize, a function heading with pre- and postconditions provides the following information:
+总而言之，函数头信息连同该函数的前置条件与后置条件一起为我们提供了以下信息：
 
-1. the *return-type* that provides the type of value returned by the function
-2. the *function-name* that begins a valid function call
-3. the *parameter-list* that provides the number and class of arguments required in the function call
-4. pre:, which describes what must be true before calling this function
-5. post:, which describes what the function does if the preconditions are met
+1. *return-type*告诉了我们函数返回值的类型。
+2. *function-name*告诉了我们如何启动一个有效的函数调用。
+3. *parameter-list*告诉了我们在执行函数调用时要用到的参数数量以及这些参数的类型。
+4. `pre:`告诉了我们在执行函数调用之前应满足哪些要求。
+5. `post:`告诉了我们当一个函数的前置条件被满足之后，它会做哪些事。
 
 In addition to revealing information to programmers, function headings supply information to the compiler to verify the validity of every attempt to call that function. Th e compiler informs you if a function is not called properly. Consider the oor function heading:
 
+
+
 ```C++
-double oor(double x)
+double floor(double x)
 // post: Returns the largest integer <= x
 ```
 
